--- a/project/css/jobkh_header.css
+++ b/project/css/jobkh_header.css
@@ -829,6 +829,11 @@ header .headNavBar .jkNavArea .navItem .linkItem .spNav .txIr {
     letter-spacing: -.5px;
 }
 
+header .headNavBar .jkNavArea .navItem .linkItem .spNav .txIr:hover {
+    color: #00f;
+    letter-spacing: -.5px;
+}
+
 /* 공채정보 버튼 위 2023 작은 이미지 추가 */
 header .headNavBar .jkNavArea .serviceNav .navItem.start > a:before {
     content: "";
