--- a/project/onpick/css/onpick_layout.css
+++ b/project/onpick/css/onpick_layout.css
@@ -18,7 +18,7 @@
     background: #fff;
 }
 
-header, nav, #content, footer {
+header, nav, main, footer {
     /* 중앙 정렬 방식 */
     width: 1240px;
     margin: 0 auto;
