--- a/project/onpick/css/onpick_layout.css
+++ b/project/onpick/css/onpick_layout.css
@@ -1,5 +1,7 @@
 * {
-    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
 .wrap {
@@ -16,6 +18,15 @@
 }
 .wrap.footer {
     background: #fff;
+}
+
+body {
+    width: 100%;
+    font-family: "\B9D1\C740 \ACE0\B515",Malgun Gothic,"\B3CB\C6C0",Dotum,sans-serif;
+    color: #333;
+    font-size: 13px;
+    letter-spacing: -.5px;
+    line-height: 1;
 }
 
 header, nav, main, footer {
