--- a/project/css/jobkh_main.css
+++ b/project/css/jobkh_main.css
@@ -297,3 +297,22 @@
 .skip{
   font-size: 0;
 }
+
+.go_top {
+  position: fixed;
+  display: none;
+  bottom: 40px;
+  right: 40px;
+  width: 56px;
+  height: 56px;
+  background-image: url(../images/go_top.svg);
+}
+
+.go_top .txt {
+  display: block;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  clip: rect(1px,1px,1px,1px);
+}
