--- a/project/onpick/css/onpick_nav.css
+++ b/project/onpick/css/onpick_nav.css
@@ -7,6 +7,7 @@
     user-select: none;
 }
 
+/* 원픽 공고 제목 */
 .recruitTitBox .recruitTit {
     color: #171717;
     letter-spacing: -1.5px;
@@ -14,11 +15,13 @@
     line-height: 36px;
     font-weight: 700;
     display: inline-block;
+    margin-bottom: 15px;
 }
 
+/* 직무 합격축하금 공고 글자 */
 .recruitTitBox .recruitTxt {
     display: inline-block;
-    margin: 0 0 0 16px;
+    margin: 0 0 15px 16px;
     font-size: 16px;
     line-height: 24px;
 }
