--- a/project/onpick/css/onpick_header.css
+++ b/project/onpick/css/onpick_header.css
@@ -1,4 +1,4 @@
-.topArea{
+#topArea{
     position: relative;
     height: 90px;
     width: 100%;
@@ -6,12 +6,12 @@
     border-bottom: 1px solid black;
     box-sizing: border-box;
 }
-.topArea .topContent{
+#topArea .topContent{
     width: 1240px;
     height: 100%;
 
 }
-.topArea .logo a span{
+#topArea .logo a span{
     display: flex;
     -webkit-box-align:center ;
     align-items: center;
@@ -21,7 +21,7 @@
     letter-spacing: -1,5px;
     font-weight: 500;
 }
-.topArea .logo a span::before{
+#topArea .logo a span::before{
     content: "";
     width: 20px;
     height: 20px;
@@ -29,18 +29,12 @@
     background-size: 100%;
     margin-right: 8px;
 }
-.topArea .topMenu{
+#topArea .topMenu{
     display: flex;
     height: 100%;
 }
-ul, li{
-    list-style: none;
-}
-
-#topArea .topMenu li, #topArea .topMenu li a {
-    height: 100%;
+#topArea .topMenu li{
+    height: 100px;
     display: flex;
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    align-items: center;
+    margin: 0px 16px 0px 17px;
 }
