--- a/project/onpick/css/onpick_main.css
+++ b/project/onpick/css/onpick_main.css
@@ -38,8 +38,8 @@
 .scrapbtn:hover .scraphover{
     visibility: visible;
     box-sizing: border-box;
-    border: 1px;
-    border-color: black;
+    border: 1px solid black;
+    border-radius: 3px;
     font-size: 10px;
     background-color: rgb(218, 218, 218);
     position: absolute;
@@ -73,8 +73,8 @@
 .companyname button:hover .intcom{
     visibility: visible;
     box-sizing: border-box;
-    border: 1px;
-    border-color: black;
+    border: 1px solid black;
+    border-radius: 3px;
     font-size: 10px;
     background-color: rgb(255, 255, 255);
     position: absolute;
