--- a/project/onpick/css/onpick_main.css
+++ b/project/onpick/css/onpick_main.css
@@ -109,8 +109,8 @@
 .additionalinfo{
     display: flex;
     font-size: 10px;
-    text-align: center;
-    justify-content: space-between;
+    text-align: left;
+   
     margin-left: 16px;
     margin-right: 16px;
     color: rgb(142, 146, 150);
