--- a/project/onpick/css/onpick_footer.css
+++ b/project/onpick/css/onpick_footer.css
@@ -3,7 +3,7 @@
 #footer,
 .footer {
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-    width: 100%;
+    width: 1240px;
     margin: 40px auto 0px;
     background: #fff;
     border-top: 1px solid #ddd
@@ -20,7 +20,7 @@
 }
 
 .footer--long .footer__wrap {
-    max-width: 1260px
+    max-width: 1240px
 }
 
 .footer--medium {
@@ -133,7 +133,7 @@
 .footer__notice .list-service:after {
     content: "";
     display: block;
-    clear: both
+    clear: both;
 }
 
 .footer__notice .list-service li {
@@ -162,11 +162,11 @@
 }
 
 .footer__notice .list-service li a:hover {
-    text-decoration: underline
+    text-decoration: underline;
 }
 
 .footer__notice-wrap {
-    width: 630px;
+    width: 500px;
     height: 100%;
     line-height: 53px;
     font-size: 0
@@ -195,10 +195,7 @@
 
 .footer__notice-text {
     display: inline-block;
-    white-space: nowrap;
     height: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box
 }
 
@@ -237,7 +234,8 @@
     position: absolute;
     top: 1px;
     right: 20px;
-    height: 53px;
+    height: 49px;
+    margin-left: 4px;
     line-height: 53px;
     background: #f6f7f9
 }
@@ -260,16 +258,17 @@
     height: 10px;
     margin-left: 6px;
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20x%3D%270px%27%20y%3D%270px%27%20viewBox%3D%270%200%20492.004%20492.004%27%3E%0D%0A%20%20%20%20%3Cpath%20%0D%0A%20%20%20%20%20%20%20%20fill%3D%27%23c3c3c3%27%20%0D%0A%20%20%20%20%20%20%20%20d%3D%27M423.386%2C248.299l-256-245.327c-4.208-4.021-10.833-3.958-14.927%2C0.167l-64%2C63.998c-2.042%2C2.042-3.167%2C4.812-3.125%2C7.687%20c0.042%2C2.896%2C1.25%2C5.625%2C3.344%2C7.604l183.792%2C173.579L88.678%2C429.586c-2.094%2C1.979-3.302%2C4.708-3.344%2C7.604%20c-0.042%2C2.875%2C1.083%2C5.646%2C3.125%2C7.687l64%2C63.998c2.083%2C2.083%2C4.813%2C3.125%2C7.542%2C3.125c2.656%2C0%2C5.313-0.979%2C7.385-2.958%20l256-245.327c2.094-2.021%2C3.281-4.792%2C3.281-7.708C426.667%2C253.09%2C425.48%2C250.319%2C423.386%2C248.299z%27%2F%3E%0D%0A%3C%2Fsvg%3E");
-    background-repeat: no-repeat;
     background-position: center;
-    -moz-background-size: 140%;
-    background-size: 140%;
-    vertical-align: middle
+    vertical-align: middle;
+}
+
+.list-service{
+    margin-right: 10px;
 }
 
 .footer__service {
     margin: 20px 0px 25px 0px;
-    text-align: center
+    text-align: center;
 }
 
 .footer__service li {
@@ -404,7 +403,7 @@
     display: inline-block;
     vertical-align: middle;
     position: relative;
-    top: -2px
+    top: 4px;
 }
 
 .footer__sns::before {
