--- a/project/onpick/css/onpick_header.css
+++ b/project/onpick/css/onpick_header.css
@@ -5,7 +5,7 @@
 }
 #topArea{
     position: relative;
-    height: 90px;
+    height: 120px;
     width: 100%;
     background-color: white;
     border-bottom: 1px solid black;
@@ -21,6 +21,7 @@
 .logo{
     display: flex;
     align-items: center ;
+   
 }
 
 .logo a span{
@@ -31,6 +32,7 @@
     line-height: 28px;
     letter-spacing: -1,5px;
     font-weight: 500;
+    margin-left: 21px;
 }
 #topArea .logo a span::before{
     content: "";
@@ -44,7 +46,9 @@
 #topArea .topMenu{
     display: flex;
     height: 100%;
-    margin-left: 500px;
+    margin-top: 15px;
+    margin-left: 570px;
+
 }
 .topMenu li{
     height: 100px;
@@ -65,12 +69,14 @@
     align-items: center;
 }
 
+/* headBanner */
 .head_banner{
     position: relative;
-    margin: 30px 0 0;
+    margin: 15px 0 0;
     text-align: center;
 }
 .head_banner .bann-wrap{
     display: inline-flex;
+    background-size: 100%;
     border-radius: 8px;
 }
