--- a/project/onpick/css/onpick_footer.css
+++ b/project/onpick/css/onpick_footer.css
@@ -1,5 +1,4 @@
-
-
+/* footer 크기설정 */
 #footer,
 .footer {
     font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
@@ -8,88 +7,24 @@
     background: #fff;
     border-top: 1px solid #ddd
 }
-
 #footer .copyright,
 .footer .copyright {
     margin: 0px;
     padding: 23px 0px 30px
 }
-
-.footer--long {
-    border-top: 1px solid #ddd
-}
-
-.footer--long .footer__wrap {
-    max-width: 1240px
-}
-
-.footer--medium {
-    border-top: 1px solid #ddd
-}
-
-.footer--medium .footer__wrap {
-    max-width: 1200px
-}
-
-.footer--small-medium {
-    border-top: 1px solid #ddd
-}
-
-.footer--small-medium .footer__wrap {
-    max-width: 1100px
-}
-
-.footer--small-medium .footer__notice-text .ellipsis {
-    max-width: 300px
-}
-
-.footer--short {
-    border-top: 1px solid #ddd
-}
-
-.footer--short .footer__wrap {
-    max-width: 960px
-}
-
-.footer--short .footer__notice-text .ellipsis {
-    max-width: 220px
-}
-
-.footer--short .footer__notice .list-service li:last-child {
-    display: none
-}
-
-.footer--line-none#footer {
-    border-top: none
-}
-
-.footer--line-none.footer {
-    border-top: none
-}
-
-.footer--main#footer {
-    border-top: none
-}
-
-.footer--main.footer {
-    border-top: none
-}
-
-.footer--main .footer__wrap {
-    max-width: 1260px
-}
-
 .footer__wrap {
     width: 100%;
     margin: 0 auto
 }
 
+/* footer advertisement 크기설정 */
 .footer__advertisement {
     padding: 20px 0px;
     display: table;
     width: 100%
 }
 
+/* advertisement--text */
 .footer__advertisement--text {
     display: table-cell;
     font-size: 14px;
@@ -97,16 +32,12 @@
     text-align: center;
     vertical-align: middle
 }
-
 .footer__advertisement--text a {
     display: block;
     color: #333
 }
 
-.footer__advertisement--text strong {
-    display: block
-}
-
+/* advertisement--image */
 .footer__advertisement--image {
     display: table-cell;
     width: 495px;
@@ -114,7 +45,7 @@
     text-align: center;
     vertical-align: middle
 }
-
+/* footer_notice 설정 */
 .footer__notice {
     position: relative;
     overflow: hidden;
@@ -123,26 +54,22 @@
     background: #f6f7f9;
     vertical-align: top
 }
-
 .footer__notice .list-service {
     position: absolute;
     right: 66px;
     top: 1px
 }
-
 .footer__notice .list-service:after {
     content: "";
     display: block;
     clear: both;
 }
-
 .footer__notice .list-service li {
     position: relative;
     float: left;
     line-height: 53px;
     padding-right: 15px
 }
-
 .footer__notice .list-service li:after {
     position: absolute;
     top: 50%;
@@ -154,17 +81,16 @@
     height: 11px;
     background: #e0e0e0
 }
-
 .footer__notice .list-service li a {
     font-size: 12px;
     color: #333;
     letter-spacing: -0.5px
 }
-
 .footer__notice .list-service li a:hover {
     text-decoration: underline;
 }
 
+/* footer__notice-wrap 설정 */
 .footer__notice-wrap {
     width: 500px;
     height: 100%;
@@ -172,42 +98,37 @@
     font-size: 0
 }
 
+/* footer 공지사항 설정 */
 .footer__notice-title {
     display: inline-block;
     width: 64px;
     height: 100%;
     margin: 0px 0px 0px 20px;
-    white-space: nowrap;
     font-weight: bold;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box
 }
-
 .footer__notice-title a {
     color: #000;
     font-size: 12px
 }
-
 .footer__notice-title a:hover {
     text-decoration: underline
 }
 
+/* notice-text 설정 */
 .footer__notice-text {
     display: inline-block;
     height: 100%;
     box-sizing: border-box
 }
-
 .footer__notice-text a {
     color: #000;
     font-size: 12px
 }
-
 .footer__notice-text a:hover {
     color: #000
 }
-
+/* notice-text 세부내용 */
 .footer__notice-text .ellipsis {
     display: inline-block;
     max-width: 350px;
@@ -218,11 +139,9 @@
     vertical-align: top;
     letter-spacing: -0.5px
 }
-
 .footer__notice-text .ellipsis:hover {
     text-decoration: underline
 }
-
 .footer__notice-text em {
     display: inline-block;
     color: #888;
@@ -230,6 +149,7 @@
     vertical-align: top
 }
 
+/* footer__notice_service(더 보기) 설정 */
 .footer__notice_service {
     position: absolute;
     top: 1px;
@@ -239,16 +159,13 @@
     line-height: 53px;
     background: #f6f7f9
 }
-
 .footer__notice_service a {
     color: #000;
     font-weight: bold
 }
-
 .footer__notice_service a:hover {
     text-decoration: underline
 }
-
 .footer__notice_service a::after {
     content: "";
     position: relative;
@@ -262,72 +179,44 @@
     vertical-align: middle;
 }
 
+/* list-service 위치 */
 .list-service{
     margin-right: 10px;
 }
 
+/* footer__service 설정 (회사소개) */
 .footer__service {
     margin: 20px 0px 25px 0px;
     text-align: center;
 }
-
 .footer__service li {
     display: inline-block;
     margin: 0 15px
 }
-
 .footer__service li a {
     color: #000;
     font-size: 14px
 }
-
 .footer__service li a:hover {
     text-decoration: underline
 }
-
 .footer__service-item {
     display: inline-block;
     margin: 0px 8px
 }
-
 .footer__service-item a {
     color: #000
 }
 
+/* footer__help 설정(고객센터) */
 .footer__help {
     margin-bottom: 7px;
     color: #888;
     text-align: center
 }
-
-.footer__help-link {
-    color: #888
-}
-
-.footer__help-link:active {
-    color: #06c
-}
-
-.footer__help-link:hover {
-    color: #06c
-}
-
-.footer__help-link:focus {
-    color: #06c
-}
-
-.footer__help-link:visited {
-    color: #888
-}
-
 .footer__help-wrap {
     display: inline-block
 }
-
-.footer__help-wrap .footer__help-link {
-    display: inline
-}
-
 .footer__help-wrap::before {
     content: "l";
     display: inline-block;
@@ -335,24 +224,15 @@
     color: #ccc;
     margin: 0 7px
 }
-
+/* footer__help working hour */
 .footer__help-wrap--working-hour::before {
     display: none
 }
 
-.footer__help-wrap--footer__consult {
-    position: relative;
-    top: -2px
-}
-
-.footer__help-wrap--footer__consult::before {
-    vertical-align: -2px
-}
-
+/* footer__help FAX */
 .footer__help-title {
     display: inline-block
 }
-
 .footer__help-title::after {
     content: ": ";
     display: inline-block;
@@ -360,20 +240,18 @@
     margin-left: 3px
 }
 
+/* footer__help-text */
 .footer__help-text {
     display: inline-block
 }
-
 .footer__help-text span {
     letter-spacing: 0
 }
-
 .footer__help-text>a.footer__help-link {
     color: #888;
     text-decoration: none;
     letter-spacing: 0px
 }
-
 .footer__help-text>a.footer__help-link:hover {
     text-decoration: underline
 }
@@ -470,7 +348,6 @@
 .footer__company-item {
     display: inline-block;
     zoom: 1;
-    *display: inline;
     margin-bottom: 3px;
     font-size: 12px;
     color: #888;
