--- a/project/onpick/css/onpick_main.css
+++ b/project/onpick/css/onpick_main.css
@@ -148,5 +148,28 @@
 /**/
 /**/
 /**/
-/**/
+/*
+firstcat : 기획전략
+secondcat : 법무사무총무
+thirdcat : 인사HR
+fourthcat : 회계세무
+fifthcat : 마케팅광고MD
+sixthcat : 개발데이터
+seventhcat : 디자인
+eighthcat : 물류무역
+ninthcat : 운전운송배송
+tenthcat : 영업
+eleventhcat : 고객상담TM
+twelvethcat : 금융보험
+thirteenthcat : 식음료
+fourteenthcat : 고객서비스리테일
+fifteenthcat : 엔지니어링설계
+sixteenthcat : 제조생산
+seventeenthcat : 교육 
+eighteenthcat : 건축시설
+nineteenthcat : 의료바이오
+twentiethcat : 미디어문화스포츠
+twentyfirstcat : 공공복지
+
+*/
 
